# IsingNucleation

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  main.c
analysis/: Untitled.ipynb  free_energy.ipynb  nucleation.ipynb
analysis/.ipynb_checkpoints/: free_energy-checkpoint.ipynb
headers/: ising_lattice.h  media.h  monte_carlo.h  simul.h  transition_path_sampl.h  util.h
output/: free_energy_test_result.txt  mag.txt
src/: CMakeLists.txt  ising_lattice.c  media.c  monte_carlo.c  simul.c  transition_path_sampl.c  util.c
